--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@drawable/app_logo"
+        android:icon="@drawable/protco_logo"
         android:label="@string/rino_app_name"
         android:maxAspectRatio="2.4"
         android:networkSecurityConfig="@xml/network_security_config"
